# nightfall

./: README.md
core/: Cargo.toml  README.md
core/src/: address.rs  auth.rs  client.rs  constants.rs  db.rs  handlers.rs  keys.rs  lighwalletd_client.rs  main.rs  models.rs  prover.rs  wallet.rs
nightfall_api/: .env.example  Cargo.toml
nightfall_api/src/: main.rs
nightfall_api/src/db/: db.rs
nightfall_api/src/models/: mod.rs  models.rs  zcash_models.rs
nightfall_api/src/routes/: auth.rs  mod.rs  transactions.rs
nightfall_api/src/services/: mod.rs  prover.rs  pzct_service.rs
nightfall_api/src/utils/: constants.rs  mod.rs  rpc.rs
nightfall_frontend/: package-lock.json  package.json
nightfall_frontend/app/: page.tsx
web/: package-lock.json  package.json
web/app/: layout.tsx  page.tsx
web/app/create/wallet/: page.tsx
web/app/dashboard/: page.tsx
web/components/: Header.tsx  Modal.tsx
web/context/: WalletContext.ts
