[package]
name = "nightfall"
version = "0.1.0"
edition = "2024"

[dependencies]
# ZCASH crates
zcash_client_backend = { git ="https://github.com/zcash/librustzcash.git", rev = "9f47de6", features = ["lightwalletd-tonic-transport", "transparent-inputs"] }
zcash_primitives = "0.26.1"
zcash_protocol = { git ="https://github.com/zcash/librustzcash.git", rev = "9f47de6"}
zcash_address = { git ="https://github.com/zcash/librustzcash.git", rev = "9f47de6" }
zcash_transparent = { git ="https://github.com/zcash/librustzcash.git", rev = "9f47de6", features = ["transparent-inputs"] }
zcash_proofs = { git ="https://github.com/zcash/librustzcash.git", rev = "9f47de6", features = ["bundled-prover"]}
zcash_keys = { git ="https://github.com/zcash/librustzcash.git", rev = "9f47de6", features = ["orchard", "sapling", "transparent-inputs"]}

# HTTP
anyhow = "1.0.100"
tokio = { version = "1.48.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
actix-web = "4.12.0"

# UTILS
orchard = "0.11.0"
dotenv = "0.15.0"
pczt = "=0.3.0"
serde = "1.0.228"
serde_json = "1.0.145"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
chrono = { version = "0.4.41", features = ["serde"] }
tonic = { version = "0.14.2", default-features = false, features = [
"tls-native-roots"
] }
prost = "0.13"

# SQL
rusqlite = { version = "0.37", features = ["bundled"] }
zcash_client_sqlite = "0.19.0"
thiserror = "2.0.17"

# CRYPTOGRAPHY
sha2 = "0.10.9"
rand = "0.9.2"
jsonwebtoken = { version = "10.2.0" , features = ["rust_crypto"] }
bip39 = "2.2.0"
zip32 = "0.2.1"
zip321 = "0.6.0"
