[package]
name = "nightfall"
version = "0.1.0"
edition = "2024"

[dependencies]
zcash_client_backend = { git ="https://github.com/zcash/librustzcash.git", rev = "9f47de6", features = ["lightwalletd-tonic-transport", "transparent-inputs"] }
zcash_primitives = "0.26.1"
zcash_protocol = { git ="https://github.com/zcash/librustzcash.git", rev = "9f47de6"}
zcash_address = { git ="https://github.com/zcash/librustzcash.git", rev = "9f47de6" }
zcash_transparent = { git ="https://github.com/zcash/librustzcash.git", rev = "9f47de6"}
zcash_proofs = { git ="https://github.com/zcash/librustzcash.git", rev = "9f47de6", features = ["bundled-prover"]}
zcash_keys = { git ="https://github.com/zcash/librustzcash.git", rev = "9f47de6", features = ["orchard", "sapling", "transparent-inputs"]}
zcash_encoding = "0.3.0"

# HTTP
anyhow = "1.0.100"
axum-macros = "0.5.0"
tokio = { version = "1.48.0", features = ["full"] }
axum = {version ="0.8.4" , features=["macros"]}
axum-extra = "0.12.2"
reqwest = { version = "0.12", features = ["json"] }

# ZCASH crates

# UTILS
bcrypt = "0.17.1"
orchard = "0.11.0"
dotenv = "0.15.0"
pczt = "=0.3.0"
serde = "1.0.228"
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "macros", "chrono"] }
hex = "0.4"

jsonwebtoken = { version = "10.2.0" , features = ["rust_crypto"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
chrono = { version = "0.4.41", features = ["serde"] }
tonic = "0.14.2"
prost = "0.13"
